k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lovpen-web
  labels:
    name: lovpen-web
    environment: production
