k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lovpen-web-service
  namespace: lovpen-web
  labels:
    app: lovpen-web
spec:
  selector:
    app: lovpen-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
